extract button as separate component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,10 +13,10 @@
   }
 }
 
-.btn-primary {
+/* .btn-primary {
   @apply px-4 rounded bg-blue-500 text-white w-[128px] cursor-pointer;
 }
 
 .btn-secondary {
   @apply px-4  rounded border border-solid  w-[128px] cursor-pointer;
-}
+} */
