use local storage

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,12 +7,16 @@
     --default-text: black;
     --btn-primary-bg: #003eab;
     --btn-primary-bg-disabled: lightgray;
+    --btn-primary-text: white;
+    --btn-default-text: black;
 
     @variant dark {
       --default-bg: #111827;
       --default-text: white;
       --btn-primary-bg: #7ca2e5;
       --btn-primary-bg-disabled: lightgray;
+      --btn-primary-text: white;
+      --btn-default-text: white;
     }
   }
 }
@@ -27,6 +31,14 @@
 
 @utility btn-primary-bg {
   background-color: var(--btn-primary-bg);
+}
+
+@utility btn-primary-text {
+  color: var(--btn-primary-text);
+}
+
+@utility btn-default-text {
+  color: var(--btn-default-text);
 }
 
 @utility btn-primary-bg-disabled {
