Some stylistic changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@
     @variant dark {
       --default-bg: #111827;
       --default-text: white;
-      --btn-primary-bg: #7ca2e5;
+      --btn-primary-bg: #003eab;
       --btn-primary-bg-disabled: lightgray;
       --btn-primary-text: white;
       --btn-default-text: white;
