Change bg color and minor style changes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,7 @@
 
 @layer theme {
   :root {
-    --default-bg: white;
+    --default-bg: #f4f4f9;
     --default-text: black;
     --btn-primary-bg: #003eab;
     --btn-primary-bg-disabled: lightgray;
